added song thumbnails and linked frontapage songs to song specific pages

--- a/spunimusic/templates/index.css
+++ b/spunimusic/templates/index.css
@@ -20,6 +20,11 @@ body, html {
     float: left;
 }
 
+#thumbnail  {
+	height:150px;
+	width:150px;
+}
+
 .listing-text {
     margin-top: 20px;
     margin-left: 10px;
