Changed the index page. Fixed CSS. Added Static.

--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Spuni - Music at your fingertips.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
 
         {% block css_block %}
         {% endblock %}
@@ -20,7 +21,7 @@
     <nav id="navigation-bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid collapse navbar-collapse">
             <div class="col-xs-4">
-                <img src="images/spuni_100x69.png" alt="Spuni Logo">
+                <img src="{% static 'images/spuni_100x69.png' %}" alt="Spuni Logo">
             </div>
             <div class="col-xs-4">
                 <input id="navbar-search" class="form-control text-center top-padding-search" type="text" placeholder="Search for your favourite song.">
@@ -46,7 +47,6 @@
     {% block body_block %}
     {% endblock %}
 
-    <script src="index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
