--- a/spunimusic/static/css/base.css
+++ b/spunimusic/static/css/base.css
@@ -1,8 +1,10 @@
 body, html {
     height: 100%;
+    background-color: #E8E8E8 !important;
     font-family: 'Oswald', sans-serif;
 }
 
 #navbar-search {
     width: 400px;
+    margin-left: 100px;
 }
