--- a/spunimusic/static/css/index.css
+++ b/spunimusic/static/css/index.css
@@ -1,12 +1,3 @@
-body, html {
-    height: 100%;
-    font-family: 'Oswald', sans-serif;
-}
-
-#navbar-search {
-    width: 400px;
-}
-
 .top-space {
     margin-top: 20px;
 }
@@ -34,4 +25,15 @@ body, html {
 
 .listing-button {
     float: right;
+}
+
+.container {
+    margin-bottom: 30px;
+}
+
+.border {
+    background-color: white;
+    padding-bottom: 10px;
+    border-style: solid;
+    border-width: medium;
 }
