--- a/spunimusic/templates/add_song.html
+++ b/spunimusic/templates/add_song.html
@@ -15,6 +15,7 @@
         {{ field.errors }}
         {{ field.help_text }}
         {{ field }}
+    {% endfor %}
     <input type="submit" value="submit" value="Add Song"/>
 </form>
 {% endblock %}
