--- a/spunimusic/templates/login.html
+++ b/spunimusic/templates/login.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %} 
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block css_block %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}"> 
 {% endblock %}
 
 {% block body_block %}
-<h1>Login to Spuni!</h1>
-<form id="login_form" method="post" action={% url 'spuni:login' %}>
-    {% csrf_token %}
-    Username: <input type="text" name="username" value="" size=50 />
-    <br />
-    Password: <input type="password" name="password" value="" size=50 />
-    <br />
-    <input type="submit" value="submit" />
-</form>
+    <div class="container">
+        <div class="row top-space">
+            <div class="col-md-12">
+                <h1>Login to Spuni!</h1>
+                <form id="login_form" method="post" action="{% url 'spuni:login' %}">
+                    {% csrf_token %}
+                    {{ login_form|crispy }}
+                    <input type="submit" value="submit" class="btn btn-success" />
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
