Logout button now working.

--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -31,7 +31,7 @@
                     <div class="btn-group">
                         <a class="nav-link text btn btn-secondary" href="#">My Profile</a>
                         <a class="nav-link text btn btn-secondary" href="#">My Settings</a>
-                        <a class="nav-link text btn btn-secondary" href="#">Logout</a>
+                        <a class="nav-link text btn btn-secondary" href="{% url 'spuni:logout'%}">Logout</a>
                     </div>
                 {% else %}
                     <div class="btn-group">
