--- a/spunimusic/templates/profile.html
+++ b/spunimusic/templates/profile.html
@@ -7,6 +7,7 @@
 {% block body_block %}
     {% if user %}
         {% if username %}
+            <img src="{{ user.photo }}" alt="{{ username }}'s profile picture" />
             <h1>{{ username }}</h1>
                 {% if songs %}
                     <ul>
