--- a/spunimusic/templates/index.html
+++ b/spunimusic/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} 
 {% load static %} 
 {% block css_block %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}"> 
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<script src="{% static 'js/votes.js' %}"></script>
 {% endblock %} 
 {% block body_block %}
 <!-- Banner -->
@@ -30,8 +31,8 @@
                 <p class="listing-text">{{song.name}}
                     <br>{{song.artist}}</p>
             </a>
-            <img class="listing-button" src="{% static 'images/downvote.png' %}" width=150px height=150px>
-            <img class="listing-button" src="{% static 'images/upvote.png' %}" width=150px height=150px>
+            <img id="downvote" class="listing-button" src="{% static 'images/downvote.png' %}" width=150px height=150px>
+            <img id="upvote" class="listing-button" src="{% static 'images/upvote.png' %}" width=150px height=150px>
         </div>
     </div>
     {% endfor %} 
