--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 {% load static %}
 
 <html>
@@ -7,47 +8,60 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Spuni - Music at your fingertips.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
+
+        <!-- The base CSS file, containing everything. -->
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+        <!-- JQuery. It's added here to be called before the scripts. -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
 
-        {% block css_block %}
-        {% endblock %}
-
+        <!-- Bootstrap. -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <!-- New Font. -->
+        <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
     </head>
+
     <body>
+        <!-- Navigation Bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <!-- Navigation Bar -->
-    <nav id="navigation-bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid collapse navbar-collapse">
-            <div class="col-xs-4">
-                <a href="{% url 'spuni:index'%}"><img src="{% static 'images/spuni_100x69.png' %}" alt="Spuni Logo"></a>
-            </div>
-            <div class="col-xs-4">
-                <input id="navbar-search" class="form-control text-center top-padding-search" type="text" placeholder="Search for your favourite song.">
-            </div>
-            <div class="col-xs-4">
-                {% if user.is_authenticated %}
-                    <div class="btn-group">
-                        <a class="nav-link text btn btn-secondary" href="#">My Profile</a>
-                        <a class="nav-link text btn btn-secondary" href="#">My Settings</a>
-                        <a class="nav-link text btn btn-secondary" href="{% url 'spuni:logout'%}">Logout</a>
-                    </div>
-                {% else %}
-                    <div class="btn-group">
-                        <a class="nav-link text btn btn-secondary" href="{% url 'spuni:register'%}">Sign Up</a>
-                        <a class="nav-link text btn btn-secondary" href="{% url 'spuni:login'%}">Sign In</a>
-                    </div>
-                {% endif %}
-            </div>
-        </div>
-    </nav>
-    <!-- Navigation Bar End -->
+            <div class="container-fluid collapse navbar-collapse">
 
-    {% block body_block %}
-    {% endblock %}
+                <!-- Spuni Logo -->
+                <div class="col-xs-4 navbar-nav mx-auto">
+                    <a href="{% url 'spuni:index'%}"><img src="{% static 'images/spuni_100x69.png' %}" alt="Spuni Logo"></a>
+                </div>
 
-    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+                <!-- Search Bar -->
+                <div class="col-xs-4 navbar-nav mx-auto">
+                    <input id="search-bar" class="form-control text-center top-padding-search" type="text" placeholder="Search for your songs.">
+                </div>
+                
+                <!-- Buttons -->
+                <div class="col-xs-4 navbar-nav mx-auto">
+                    {% if user.is_authenticated %}
+                        <div class="btn-group">
+                            <a class="nav-link text btn btn-secondary" href="#">My Profile</a>
+                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:logout'%}">Logout</a>
+                        </div>
+                    {% else %}
+                        <div class="btn-group">
+                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:register'%}">Sign Up</a>
+                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:login'%}">Sign In</a>
+                        </div>
+                    {% endif %}
+                </div>
+
+            </div>
+
+        </nav>
+        <!-- Navigation Bar -->
+
+        <!-- Main Body -->
+        {% block body_block %}
+        {% endblock %}
+        <!-- Main Body -->
     </body>
 </html>
