--- a/spunimusic/templates/song.html
+++ b/spunimusic/templates/song.html
@@ -3,5 +3,16 @@
 {% load static %}
 
 {% block body_block %}
-
+<div class="container border space-top">
+    <div class="row space-top space-bottom">
+        <div class="col-md-12">
+            <img src="{{ song.albumArt }}" class="big-image float-left">
+            <p class="song-text"><strong>Song</strong>: {{song.name}}<br><strong>Artist</strong>: {{song.artist}}<br><strong>Likes</strong>: {{song.upvotes}}</p>
+            <div class="col-md-6 float-left">
+                <img class="song-image-small float-left" title="{{song.slug}}" src="{% static 'images/upvote.png' %}">
+                <img class="song-image-small space-left" title="{{song.slug}}" src="{% static 'images/downvote.png' %}">
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
