--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -22,6 +22,9 @@
         <!-- Notifications -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" type="text/javascript"></script>
 
+        <!-- Search Bar -->
+        <script src="{% static 'js/searchbar.js' %}" type="text/javascript"></script>
+
         <!-- New Font. -->
         <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet"> 
     </head>
@@ -44,15 +47,15 @@
                 
                 <!-- Buttons -->
                 <div class="col-xs-4 navbar-nav mx-auto">
-                    {% if user.is_authenticated %}
+                    {% if user %}
                         <div class="btn-group">
-                            <a class="nav-link text btn btn-secondary" href="#">My Profile</a>
-                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:logout'%}">Logout</a>
+                            <a class="nav-link text btn btn-secondary" href="/spuni/profile/{{ user.username }}">My Profile</a>
+                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:logout' %}">Logout</a>
                         </div>
                     {% else %}
                         <div class="btn-group">
-                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:register'%}">Sign Up</a>
-                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:login'%}">Sign In</a>
+                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:register' %}">Sign Up</a>
+                            <a class="nav-link text btn btn-secondary" href="{% url 'spuni:login' %}">Sign In</a>
                         </div>
                     {% endif %}
                 </div>
