--- a/spunimusic/templates/profile.html
+++ b/spunimusic/templates/profile.html
@@ -5,7 +5,7 @@
 {% block body_block %}
 <div class="container border space-top">
     {% if not user %}
-        <p>Not user.</p>
+        <p>User does not exist.</p>
     {% else %}
         <div class="row">
             <img class="float-left profile-identity" src="{{ user.photo }}" alt="{{ username }}'s profile picture" />
@@ -28,4 +28,6 @@
         {% endif %}
     {% endif %}
 </div>
+
+<script src="{% static 'js/votes.js' %}" type="text/javascript"></script>
 {% endblock %}
