Downvote is working.

--- a/spunimusic/templates/search.html
+++ b/spunimusic/templates/search.html
@@ -30,7 +30,7 @@
                     <a href="{% url 'spuni:show_song' value.slug %}">
                         <img class="song-image float-left" src={{value.album_art}}>
                     </a>
-                    <p class="song-text"><strong>Song</strong>: {{value.name}}<br><strong>Artist</strong>: {{value.artist_name}}<br><strong>Likes</strong>: 0</p>
+                    <p class="song-text"><strong>Song</strong>: {{value.name}}<br><strong>Artist</strong>: {{value.artist_name}}<br><strong>Likes</strong>: {{value.upvotes}}</p>
                     <img id="downvote" title="{{value.slug}}" class="song-image float-right" src="{% static 'images/downvote.png' %}">
                     <img id="upvote" title="{{value.slug}}" class="song-image float-right" src="{% static 'images/upvote.png' %}">
                 </div>
