--- a/spunimusic/templates/index.html
+++ b/spunimusic/templates/index.html
@@ -18,7 +18,7 @@
 <!-- Banner -->
 
 <!-- Song Table -->
-<div class="container border">
+<div class="container">
         {% if not songs %}
             <!-- If there are no songs then post an error. -->
             <div class="row space-top">
@@ -26,12 +26,12 @@
             </div>
         {% else %}
             {% for song in songs %}
-                <div class="row space-top">
-                    <div class="col-md-12">
+                <div class="row" style="background:#212529;margin-bottom:15px;">
+                    <div class="test">
                         <a href="{% url 'spuni:show_song' song.slug %}">
                             <img class="song-image float-left" src={{song.albumArt}}>
                         </a>
-                        <p class="song-text"><strong>Song</strong>: {{song.name}}<br><strong>Artist</strong>: {{song.artist}}<br><strong>Likes</strong>: {{song.upvotes}}</p>
+                        <p class="song-text"><strong>Song:</strong> {{song.name}}<br><strong>Artist:</strong> {{song.artist}}<br><strong>Likes:</strong> {{song.upvotes}}</p>
                         <img id="downvote" title="{{song.slug}}" class="song-image float-right" src="{% static 'images/downvote.png' %}">
                         <img id="upvote" title="{{song.slug}}" class="song-image float-right" src="{% static 'images/upvote.png' %}">
                     </div>
