--- a/spunimusic/templates/index.html
+++ b/spunimusic/templates/index.html
@@ -26,14 +26,14 @@
             </div>
         {% else %}
             {% for song in songs %}
-                <div class="row" style="background:#212529;margin-bottom:15px;">
+                <div class="row song-bar" >
                     <div class="test">
-                        <a href="{% url 'spuni:show_song' song.slug %}">
-                            <img class="song-image float-left" src={{song.albumArt}}>
+                        <a href="{% url 'spuni:show_song' song.slug %}" >
+                            <img class="song-image float-left"  src={{song.albumArt}}>
+							<p class="song-text"><strong>Song:</strong> {{song.name}}<br><strong>Artist:</strong> {{song.artist}}<br><strong>Likes:</strong> {{song.upvotes}}</p>
                         </a>
-                        <p class="song-text"><strong>Song:</strong> {{song.name}}<br><strong>Artist:</strong> {{song.artist}}<br><strong>Likes:</strong> {{song.upvotes}}</p>
-                        <img id="downvote" title="{{song.slug}}" class="song-image float-right" src="{% static 'images/downvote.png' %}">
-                        <img id="upvote" title="{{song.slug}}" class="song-image float-right" src="{% static 'images/upvote.png' %}">
+						<img id="downvote" title="{{song.slug}}" alt="upvote" class="song-image float-right" src="{% static 'images/downvote.png' %}">
+                        <img id="upvote" title="{{song.slug}}" alt="downvote" class="song-image float-right" src="{% static 'images/upvote.png' %}">
                     </div>
                 </div>
             {% endfor %}
