--- a/spunimusic/static/css/base.css
+++ b/spunimusic/static/css/base.css
@@ -4,6 +4,7 @@ body, html {
     font-family: 'Oswald', sans-serif;
 }
 
+
 #search-bar {
     max-width: 400px;
     width: 100%;
@@ -17,9 +18,6 @@ body, html {
     margin-left: 20px;
 }
 
-.space-bottom {
-    margin-bottom: 10px;
-}
 
 .text-header {
     text-align: center;
@@ -74,7 +72,7 @@ body, html {
     float: left;
 }
 
-.test{
+.row-format{
     position: relative;
     width: 100%;
     min-height: 1px;
